# CPP_basics

./: .gitignore  README.md
UserDefTypes/: App.cpp  CreditCard.h  test
UserDefTypes/creditcard/: App.cpp  CreditCard.cpp
UserDefTypes/dollarAmount/: DollarAmount.h  interest.cpp
UserDefTypes/grade/: CMakeLists.txt  Grade.cpp  Grade.h  main.cpp
UserDefTypes/phoneBook/: telebook.txt  telephoneBook.cpp  telephone_map  undered_telepone_map.cpp  unordered_map
UserDefTypes/task/: .gitignore  CMakeLists.txt  concept.hpp  task.cpp  task.hpp  test.cpp  testing.cpp  timestamp.cpp  timestamp.hpp
boost_stuff/regular_expr/: CMakeLists.txt  reMatch.cpp  validExpr.cpp
calendar/: .calender.dat.swp  cal.cpp  calendar  calendar.cpp  calendar.hpp
controll/loop/: while.cpp
cpp_17/Binding/: bind  bind.cpp  map  map.cpp
cpp_17/Init_if/: a.out  find  findString.cpp  findString2.cpp
cpp_17/InlineV/: a.out  myClass.h  user.cpp
cpp_20/concepts/: helloworld.cpp  main.cpp  user.cpp
cpp_20/cpp_features/: ftest.cpp
cpp_20/spaceship/: space  threeWayComarison.cpp
cpplambda/: capture  firslambda.cpp  flambda  functor.cpp  functorState.cpp  functor_capture_variable.h  local  localFuntor.cpp  main.cpp  state
input_output/: char_set  charset.out  outfile  pop.cpp  populate  populate.text  reading  reading.cpp  sample.txt  testo.txt  text.txt  write  writing.cpp
pow/: pi  pi_e.cpp
reduced_resources/src/: CMakeLists.txt  main.cpp
templates/: spclass.h  stack.cpp  stack.h  stack2.h  stacktest.cpp  stacktest2.cpp
templates/foldexpr/: fold  foldExpr.cpp
templates/forward/: move.cpp
(+24 files in other folders)
